correcting button spacing

--- a/sass/px-datetime-buttons.scss
+++ b/sass/px-datetime-buttons.scss
@@ -23,5 +23,5 @@ $inuit-enable-btn--disabled        : true;
 //component
 
 //trumps
-$inuit-enable-margins--tiny      : true;
+$inuit-enable-margins--small      : true;
 @import "px-spacing-design/_trumps.spacing.scss";
